@@ -1,6 +1,14 @@
 package de.onvif.soap;
 
 import de.onvif.beans.DeviceInfo;
+import java.net.ConnectException;
+import java.net.MalformedURLException;
+import java.net.URL;
+import java.util.Arrays;
+import java.util.Calendar;
+import java.util.Date;
+import java.util.TimeZone;
+import java.util.concurrent.TimeUnit;
 import jakarta.xml.soap.SOAPException;
 import jakarta.xml.ws.BindingProvider;
 import jakarta.xml.ws.Holder;
@@ -19,22 +27,21 @@ import org.onvif.ver10.events.wsdl.EventPortType;
 import org.onvif.ver10.events.wsdl.EventService;
 import org.onvif.ver10.media.wsdl.Media;
 import org.onvif.ver10.media.wsdl.MediaService;
-import org.onvif.ver10.schema.*;
+import org.onvif.ver10.schema.Capabilities;
+import org.onvif.ver10.schema.CapabilityCategory;
+import org.onvif.ver10.schema.DateTime;
+import org.onvif.ver10.schema.MediaUri;
+import org.onvif.ver10.schema.SetDateTimeType;
+import org.onvif.ver10.schema.StreamSetup;
+import org.onvif.ver10.schema.StreamType;
+import org.onvif.ver10.schema.Transport;
+import org.onvif.ver10.schema.TransportProtocol;
 import org.onvif.ver20.imaging.wsdl.ImagingPort;
 import org.onvif.ver20.imaging.wsdl.ImagingService;
 import org.onvif.ver20.ptz.wsdl.PTZ;
 import org.onvif.ver20.ptz.wsdl.PtzService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
-import java.net.ConnectException;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.util.Calendar;
-import java.util.Date;
-import java.util.List;
-import java.util.TimeZone;
-import java.util.concurrent.TimeUnit;
 
 /**
  * @author Robin Dick
@@ -129,7 +136,7 @@ public class OnvifDevice {
 
     // resetSystemDateAndTime();		// don't modify the camera in a constructor.. :)
 
-    Capabilities capabilities = this.device.getCapabilities(List.of(CapabilityCategory.ALL));
+    Capabilities capabilities = this.device.getCapabilities(Arrays.asList(CapabilityCategory.ALL));
     if (capabilities == null) {
       throw new ConnectException("Capabilities not reachable.");
     }
@@ -208,7 +215,7 @@ public class OnvifDevice {
     date.setYear(calendar.get(Calendar.YEAR));
     date.setMonth(calendar.get(Calendar.MONTH) + 1);
     date.setDay(calendar.get(Calendar.DAY_OF_MONTH));
-    DateTime utcDateTime = new DateTime();
+    org.onvif.ver10.schema.DateTime utcDateTime = new org.onvif.ver10.schema.DateTime();
     utcDateTime.setDate(date);
     utcDateTime.setTime(time);
     device.setSystemDateAndTime(SetDateTimeType.MANUAL, daylightSavings, timeZone, utcDateTime);
